# VNCS

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
doc/: hybrid_simulation.drawio
python/: IdentityMultimap.py  bindings.py  objSeq2MDD.py  objSeq2gltf.py  seq.mdd  triangle.gltf
src/: CMakeLists.txt
src/VNCS/: CMakeLists.txt  CoarseStateSetter.cpp  CoarseStateSetter.h  ConcatMap.cpp  ConcatMap.h  ConjugateGradientSolver.cpp  ConjugateGradientSolver.h  DataExtensions.h  DeformationGradientTypes.h  EdgeMesh.h  FMap.h  FileSamplingPoints.cpp  FinalPositionMap.h  IntegrationScheme.h  Logger.h  MSLabSofaPluginConfig.cmake.in  Mass.cpp  Mass.h  MechanicalObject.h  NBESolver.cpp  NBESolver.h  Preconditioner.h  Projection.cpp  Projection.h  SamplingPoints.h  SamplingPointsExporter.cpp  SamplingPointsExporter.h  Spaces.h  TetraMeshGenerator.cpp  TetraMeshGenerator.h  Types.h  UMap.h  UfMap.h  minimalExample.cpp
src/VNCS/Generators/: AdaptiveMeshCriteria.h  BlendingField.h  CDT.cpp  CDT.h  CMakeLists.txt  IntegrationScheme.h  KMeans.h  PMPTriangleIntersection.cpp  PMPTriangleIntersection.h  TetraAABBTree.cpp  TetraAABBTree.h  TetraMeshGenerator.cpp  TetraMeshGenerator.h  TetraMeshIntersection.cpp  TetraMeshIntersection.h  VisualSamplersExporter.cpp  VisualSamplersExporter.h
src/VNCS/Generators/Gen202/: Gen202.cpp  Gen202.h  GenerateSampler.cpp  GenerateSampler.h  SamplingPointsExporter.cpp  SamplingPointsExporter.h
src/VNCS/Generators/Gen212/: Gen212.cpp  Gen212.h  GenerateSampler.cpp  GenerateSampler.h  SamplingPointsExporter.cpp  SamplingPointsExporter.h
src/VNCS/Generators/Gen222/: Gen222.cpp  Gen222.h  GenerateSampler.cpp  GenerateSampler.h  SamplingPointsExporter.cpp  SamplingPointsExporter.h  VisualSamplersExporter.cpp  VisualSamplersExporter.h
src/VNCS/Generators/Gen223/: Gen223.cpp  Gen223.h  GenerateSampler.cpp  GenerateSampler.h  SamplingPointsExporter.cpp  SamplingPointsExporter.h
src/VNCS/Generators/Gen223Barycentric/: Gen223.cpp  Gen223.h  GenerateSampler.cpp  GenerateSampler.h  SamplingPointsExporter.cpp  SamplingPointsExporter.h
src/VNCS/Generators/Gen323/: Gen323.cpp  Gen323.h  GenerateSampler.cpp  GenerateSampler.h  SamplingPointsExporter.cpp  SamplingPointsExporter.h
src/VNCS/Generators/Gen333/: Gen333.cpp  Gen333.h  SamplingPointsExporter.h  VisualSamplersExporter.cpp
src/VNCS/Generators/Gen3PC/: Gen3PC.cpp  Gen3PC.h  SamplingPointsExporter.cpp  SamplingPointsExporter.h  VisualSamplersExporter.h
src/VNCS/Sim2D/: BendingForceField.cpp  BendingForceField.h  CMakeLists.txt  FEMMem_StVK_Energy.mcg  FEMMem_StVK_Gradient.mcg  FEMMem_StVK_Hessian.mcg  FinalPositionMap.h  StVKForceField.cpp  StVKForceField.h  StretchForceField.cpp  StretchForceField.h  Vec2D23D.cpp  Vec2D23D.h  Vec2D23DMap.h
src/VNCS/Sim3D/: BendingForceField.cpp  BendingForceField.h  CMakeLists.txt  FEMMem_CoNH_Energy.mcg  FEMMem_CoNH_Gradient.mcg  FEMMem_CoNH_Hessian.mcg  FEMMem_InNH_Energy.mcg  FEMMem_InNH_Gradient.mcg  FEMMem_InNH_Hessian.mcg  FEMMem_Simplest_Energy.mcg  FEMMem_Simplest_Gradient.mcg  FEMMem_Simplest_Hessian.mcg  FEMMem_StVK_Energy.mcg  FEMMem_StVK_Gradient.mcg  FEMMem_StVK_Hessian.mcg  FEMVol_StVK_Energy.mcg  FEMVol_StVK_Gradient.mcg  FEMVol_StVK_Hessian.mcg  FinalPositionMap.h  StVKDamping.m  StVKForceField.cpp  StVKForceField.h  StVKForceFieldDamping.py  StableNeoHookean.cpp  StableNeoHookean.h  StretchForceField.cpp  StretchForceField.h  TriangleFabricBendingEnergyCommon.cpp  TriangleFabricBendingEnergyCommon.h
src/VNCS/py/: CMakeLists.txt  ConjugateGradient.cpp  ConjugateGradient.h  MechanicalOperations.cpp  MechanicalOperations.h  PyDeformationGradientMap.cpp  PyDeformationGradientMap.h  PyMechanicalObject.cpp  PyMechanicalObject.h  PySamplingPointsExporter.cpp  PySamplingPointsExporter.h  PySimCreator.cpp  PySimCreator.h  PyStVK.cpp  PyStVK.h  PySurfaceSamplersExporter.cpp  PySurfaceSamplersExporter.h  SamplingPoints.cpp  SamplingPoints.h  module.cpp
src/VNCS/py/Generators/: AdaptiveMeshCriteriaFunctor.cpp  AdaptiveMeshCriteriaFunctor.h  BlendingField.cpp  BlendingField.h  CMakeLists.txt  Gen202.cpp  Gen202.h  Gen212.cpp  Gen212.h  Gen222.cpp  Gen222.h  Gen223.cpp  Gen223.h  Gen223Barycentric.cpp  Gen223Barycentric.h  Gen323.cpp  Gen323.h  Gen333.cpp  Gen333.h
src/VNCS/py/Sim2D/: BendingEnergy.cpp  BendingEnergy.h  CMakeLists.txt  ConcatMap.cpp  ConcatMap.h  DeformationGradientMO.cpp  DeformationGradientMO.h  DeformationGradientMap.cpp  DeformationGradientMap.h  DisplacementMap.cpp  DisplacementMap.h  EnhaceRelationMap.cpp  EnhaceRelationMap.h  FinalPositionMap.cpp  FinalPositionMap.h  Mass.cpp  Mass.h  MechanicalObject.cpp  MechanicalObject.h  Projection.cpp  Projection.h  StVK.cpp  StVK.h  StretchEnergy.cpp  StretchEnergy.h  UfMap.cpp  UfMap.h  Vec2D23D.cpp  Vec2D23D.h
src/VNCS/py/Sim3D/: BendingEnergy.cpp  BendingEnergy.h  CMakeLists.txt  ConcatMap.cpp  ConcatMap.h  DeformationGradientMO.cpp  DeformationGradientMO.h  DeformationGradientMap.cpp  DeformationGradientMap.h  DisplacementMap.cpp  DisplacementMap.h  FinalPositionMap.cpp  FinalPositionMap.h  Mass.cpp  Mass.h  MechanicalObject.cpp  MechanicalObject.h  Projection.cpp  Projection.h  StVK.cpp  StVK.h  StretchEnergy.cpp  StretchEnergy.h  UfMap.cpp  UfMap.h
tests/: CMakeLists.txt
tests/BendingEnergy/: CMakeLists.txt  tst_bendingenergy.cpp
tests/ConcatMap/: CMakeLists.txt  tst_concatmap.cpp
tests/DisplacementMap/: CMakeLists.txt  tst_displacementmap.cpp
tests/EdgeMesh/: CMakeLists.txt  tst_edgemesh.cpp
tests/IntegrationScheme/: CMakeLists.txt  tst_integrationscheme.cpp
tests/Mass/: CMakeLists.txt  tst_mass.cpp
tests/MechanicalObject/: CMakeLists.txt  tst_mechanicalobject.cpp
tests/Projection/: CMakeLists.txt  tst_projection.cpp
tests/StVKEnergy/: CMakeLists.txt  tst_stvkenergy.cpp
tests/StretchEnergy/: CMakeLists.txt  tst_stretchenergy.cpp
tests/TriangleFabricBendingEnergy/: CMakeLists.txt  matrix.mat  tst_trianglefabricbendingenergy.cpp
tests/UfMap/: CMakeLists.txt  tst_ufmap.cpp
