#add_subdirectory(Mass)
#add_subdirectory(Projection)
#add_subdirectory(UfMap)
#add_subdirectory(ConcatMap)
#add_subdirectory(DisplacementMap)
#add_subdirectory(MechanicalObject)
#add_subdirectory(IntegrationScheme)
add_subdirectory(TriangleFabricBendingEnergy)
add_subdirectory(BendingEnergy)
add_subdirectory(StretchEnergy)
#add_subdirectory(StVKEnergy)
add_subdirectory(EdgeMesh)
