set(SOURCES
        )

set(HEADERS
        )

set(PUBLIC_HEADERS
        )


add_library(VNCS2D SHARED ${SOURCES} ${HEADERS} ${PUBLIC_HEADERS})
set_target_properties(VNCS2D PROPERTIES PUBLIC_HEADER "${PUBLIC_HEADERS}")
target_link_libraries(VNCS2D PUBLIC VNCS)

install(TARGETS VNCS2D
        EXPORT VNCS2DTarget
        RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
        ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
        PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/VNCS/2D)
